per chain page titles

--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
       onload="this.media='all'"
     />
     <title>app.beefy.finance</title>
-    <meta name="description" content="Multichain Yield Optimizer." />
+    <meta name="description" content="The Multichain Yield Optimizer" />
 
     <meta property="og:local" content="en_US" />
-    <meta property="og:title" content="app.beefy.finance" />
-    <meta property="og:description" content="Multichain Yield Optimizer" />
+    <meta property="og:title" content="Beefy Finance" />
+    <meta property="og:description" content="The Multichain Yield Optimizer" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://app.beefy.finance" />
     <meta property="og:image" content="https://beefy.finance/img/beefy.png" />
