Remove 'Beefy Finance' from translation

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       media="nope!"
       onload="this.media='all'"
     />
-    <title>app.beefy.finance</title>
+    <title>Beefy Finance</title>
     <meta name="description" content="The Multichain Yield Optimizer" />
 
     <meta property="og:local" content="en_US" />
