--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
         'avax.beefy.finance': 'https://app.beefy.finance/#/avax',
         'polygon.beefy.finance': 'https://app.beefy.finance/#/polygon',
         'fantom.beefy.finance': 'https://app.beefy.finance/#/fantom',
+        'harmony.beefy.finance': 'https://app.beefy.finance/#/harmony',
       }
       for (var host in redirectMap) {
         if (host == window.location.host) {
