--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
         'polygon.beefy.finance': 'https://app.beefy.finance/#/polygon',
         'fantom.beefy.finance': 'https://app.beefy.finance/#/fantom',
         'harmony.beefy.finance': 'https://app.beefy.finance/#/harmony',
+        'arbitrum.beefy.finance': 'https://app.beefy.finance/#/arbitrum',
       }
       for (var host in redirectMap) {
         if (host == window.location.host) {
