Add Sushi Pools to Celo

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
         'fantom.beefy.finance': 'https://app.beefy.finance/#/fantom',
         'harmony.beefy.finance': 'https://app.beefy.finance/#/harmony',
         'arbitrum.beefy.finance': 'https://app.beefy.finance/#/arbitrum',
+        'celo.beefy.finance': 'https://app.beefy.finance/#/celo',
       }
       for (var host in redirectMap) {
         if (host == window.location.host) {
