Moonriver app ready

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,8 @@
         'harmony.beefy.finance': 'https://app.beefy.finance/#/harmony',
         'arbitrum.beefy.finance': 'https://app.beefy.finance/#/arbitrum',
         'celo.beefy.finance': 'https://app.beefy.finance/#/celo',
+        'celo.beefy.finance': 'https://app.beefy.finance/#/celo',
+        'moonriver.beefy.finance': 'https://app.beefy.finance/#/moonriver',
       }
       for (var host in redirectMap) {
         if (host == window.location.host) {
