Add Fuse Network

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
         'celo.beefy.finance': 'https://app.beefy.finance/#/celo',
         'moonriver.beefy.finance': 'https://app.beefy.finance/#/moonriver',
         'cronos.beefy.finance': 'https://app.beefy.finance/#/cronos',
+        'fuse.beefy.finance': 'https://app.beefy.finance/#/fuse',
       }
       for (var host in redirectMap) {
         if (host == window.location.host) {
