--- a/public/index.html
+++ b/public/index.html
@@ -32,11 +32,9 @@
         'celo.beefy.finance': 'https://app.beefy.finance/#/celo',
         'moonriver.beefy.finance': 'https://app.beefy.finance/#/moonriver',
         'cronos.beefy.finance': 'https://app.beefy.finance/#/cronos',
-<<<<<<< HEAD
         'aurora.beefy.finance': 'https://app.beefy.finance/#/aurora',
-=======
         'fuse.beefy.finance': 'https://app.beefy.finance/#/fuse',
->>>>>>> 51b8488dd82458b9df38ef05111d53e654d96867
+        'metis.beef.finance': 'https://app.beefy.finance/#metis',
       }
       for (var host in redirectMap) {
         if (host == window.location.host) {
