--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         'cronos.beefy.finance': 'https://app.beefy.finance/#/cronos',
         'aurora.beefy.finance': 'https://app.beefy.finance/#/aurora',
         'fuse.beefy.finance': 'https://app.beefy.finance/#/fuse',
-        'metis.beef.finance': 'https://app.beefy.finance/#metis',
+        'metis.beefy.finance': 'https://app.beefy.finance/#/metis',
       }
       for (var host in redirectMap) {
         if (host == window.location.host) {
