--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
         'aurora.beefy.finance': 'https://app.beefy.finance/#/aurora',
         'fuse.beefy.finance': 'https://app.beefy.finance/#/fuse',
         'metis.beefy.finance': 'https://app.beefy.finance/#/metis',
+        'moonbeam.beefy.finance': 'https://app.beefy.finance/#/moonbeam',
       }
       for (var host in redirectMap) {
         if (host == window.location.host) {
