Add Oasis Emerald

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
         'fuse.beefy.finance': 'https://app.beefy.finance/#/fuse',
         'metis.beefy.finance': 'https://app.beefy.finance/#/metis',
         'moonbeam.beefy.finance': 'https://app.beefy.finance/#/moonbeam',
+        'emerald.beefy.finance': 'https://app.beefy.finance/#/emerald',
       }
       for (var host in redirectMap) {
         if (host == window.location.host) {
